# calendly-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
docs/api_spec/: activity_log.md  event_types.md  events.md  invitees.md  one_off.md  organizations.md  users.md  webhooks.md
src/: main.cpp
src/core/: auth.cpp  auth.h  cache.cpp  cache.h  color.cpp  color.h  config.cpp  config.h  error.cpp  error.h  filter.cpp  filter.h  http_client.cpp  http_client.h  output.cpp  output.h  paginator.h  platform.h  resolver.cpp  resolver.h  rest_client.cpp  rest_client.h  types.h  version.h.in
src/modules/activity_log/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/book/: commands.cpp  commands.h
src/modules/cache/: commands.cpp  commands.h
src/modules/config/: commands.cpp  commands.h
src/modules/event_types/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/events/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/invitees/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/one_off/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/organizations/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/users/: api.cpp  api.h  commands.cpp  commands.h  model.h
tests/: CMakeLists.txt  test_cache.cpp  test_filter.cpp  test_models.cpp  test_types.cpp
